--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,242 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face {
+  font-family: 'Hyperion';
+  src: url('https://cdn.bitskistatic.com/fonts/hyperion/hyperion-light.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+@font-face {
+  font-family: 'Hyperion';
+  src: url('https://cdn.bitskistatic.com/fonts/hyperion/hyperion-regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Hyperion';
+  src: url('https://cdn.bitskistatic.com/fonts/hyperion/hyperion-bold.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.hyperion {
+  font-family: 'Hyperion';
+  text-transform: lowercase;
+  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.25);
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: white;
+  height: 100vh;
+  background: black;
+}
+
+.app-bg {
+  height: 100vh;
+  background: radial-gradient(204.68% 100% at 50% 0%, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.75) 100%),
+    url('/assets/bg-noise.png'),
+    radial-gradient(55.01% 50% at 50% 50%, rgba(0, 0, 0, 0) 0%, #000 100%),
+    linear-gradient(204deg, rgba(255, 68, 27, 0.25) 0%, rgba(255, 92, 0, 0.16) 100%), #000000;
+}
+
+.planet-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: radial-gradient(
+    204.68% 100% at 50% 0%,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.75) 100%
+  );
+}
+
+.logo {
+  filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.25));
+}
+
+.btn {
+  font-family: 'Hyperion';
+  text-transform: lowercase;
+  padding: 0.5rem 1rem;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.05);
+  transition: all 0.3s ease-in-out;
+  color: #a1a1a1;
+  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.25);
+}
+
+.btn-sm {
+  padding: 0.25rem 1rem;
+}
+
+.btn:hover {
+  color: white;
+  border-color: #ffffff77;
+  cursor: pointer;
+  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
+}
+
+.btn-primary {
+  color: #ff441b;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background: rgba(255, 68, 27, 0.05);
+  position: relative;
+}
+
+.btn-primary:before {
+  content: '';
+  background: currentColor;
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  right: -1px;
+  height: 1px;
+}
+
+.btn-nobs {
+  position: relative;
+}
+
+.btn-nobs:after {
+  content: '';
+  position: absolute;
+  background: currentColor;
+  pointer-events: none;
+  top: -10.5px;
+  left: -10.5px;
+  bottom: -10.5px;
+  right: -10.5px;
+  filter: drop-shadow(0, 0, 7px, currentColor);
+
+  --nob-url: url('data:image/svg+xml,<svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_3_9)"><rect x="7.17148" y="9.99997" width="4" height="4" transform="rotate(-45 7.17148 9.99997)" fill="black"/></g><defs><filter id="filter0_d_3_9" x="0.171478" y="0.171539" width="19.6569" height="19.6569" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset/><feGaussianBlur stdDeviation="3.5"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_3_9"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_3_9" result="shape"/></filter></defs></svg>');
+
+  mask: var(--nob-url) top left no-repeat, var(--nob-url) bottom left no-repeat, var(--nob-url) top right no-repeat, var(--nob-url) bottom right no-repeat;
+}
+
+.card {
+  border: 1px solid #2e2e2e;
+  position: relative;
+  overflow: hidden;
+  background: #101010;
+  clip-path: polygon(0 0, 0 100%, calc(100% - 1.5rem) 100%, 100% calc(100% - 1.5rem), 100% 0);
+}
+
+.card h2 {
+  color: #d8d8d8;
+}
+
+.card h3 {
+  color: #696969;
+  font-size: 0.75rem;
+}
+
+.card:after {
+  content: '';
+  position: absolute;
+  width: 4rem;
+  height: 4rem;
+  transform: rotate(45deg);
+  right: -2.6847rem;
+  bottom: -2.6847rem;
+  border: 1px solid #2e2e2e;
+}
+
+.card .card-type-marker {
+  width: 1.25rem;
+  height: 0.1875rem;
+  background: #fff;
+  box-shadow: 0px 0px 7px 0px #fff;
+  position: absolute;
+  bottom: 0;
+  left: 1rem;
+}
+
+.chip {
+  font-family: 'Hyperion';
+  text-transform: lowercase;
+  font-size: 0.75rem;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.5rem;
+  background: #101010;
+  color: #a1a1a1;
+  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.25);
+  transition: all 0.3s ease-in-out;
+}
+
+.chip:hover {
+  background: #222222;
+  color: white;
+  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.5);
+}
+
+.bar {
+  background: #ffffff;
+  box-shadow: 0px 0px 7px 0px #fff;
+  height: 0.5px;
+  width: 100%;
+  position: relative;
+  overflow: visible;
+  border: none;
+}
+
+.bar:before,
+.bar:after,
+.nob {
+  content: '';
+  display: block;
+  width: 0.25rem;
+  height: 0.25rem;
+  background: currentColor;
+  box-shadow: 0px 0px 7px 0px currentColor;
+  position: absolute;
+  transform: translateY(calc(-50%)) rotate(45deg);
+}
+
+.bar:before {
+  left: 0;
+}
+
+.bar:after {
+  right: 0;
+}
+
+.icon {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.icon:before {
+  content: '';
+  display: block;
+  width: 1em;
+  height: 1em;
+  background-color: currentColor;
+  mask-size: cover;
+}
+
+.icon-plus-square:before {
+  mask-image: url('data:image/svg+xml,<svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="plus-square, add"><path id="Icon" fill-rule="evenodd" clip-rule="evenodd" d="M1.75 1.75H12.25V12.25H1.75V1.75ZM4.6667 6.41664L4.66665 7.5833L6.41667 7.58337L6.41666 9.33333L7.58333 9.33334L7.58334 7.58341L9.33333 7.58348L9.33337 6.41681L7.58334 6.41675L7.58335 4.66679L6.41669 4.66679L6.41668 6.4167L4.6667 6.41664Z" fill="%2393979F"/></g></svg>');
+}
+
+.icon-info-square:before {
+  mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none"><path fill-rule="evenodd" clip-rule="evenodd" d="M1.5 1.5V10.5H10.5V1.5H1.5ZM5 5H6.5V8.5H5.5V6H5V5ZM6.5 3.5H5.5V4.5H6.5V3.5Z" fill="%2393979F"/></svg>');
+}
+
+.icon-gear:before {
+  mask-image: url('data:image/svg+xml,<svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="settings 3, gear, preferences"><path id="Icon" fill-rule="evenodd" clip-rule="evenodd" d="M5.16549 2.67202L6.16908 1.16663H7.83108L8.83467 2.67202L10.4696 2.29472L11.7053 3.53044L11.328 5.16537L12.8334 6.16896V7.83096L11.328 8.83455L11.7053 10.4695L10.4696 11.7052L8.83467 11.3279L7.83108 12.8333H6.16908L5.16549 11.3279L3.53056 11.7052L2.29485 10.4695L2.67214 8.83455L1.16675 7.83096V6.16896L2.67214 5.16537L2.29485 3.53044L3.53056 2.29472L5.16549 2.67202ZM4.95841 6.99996C4.95841 5.87238 5.8725 4.95829 7.00008 4.95829C8.12766 4.95829 9.04175 5.87238 9.04175 6.99996C9.04175 8.12754 8.12766 9.04163 7.00008 9.04163C5.8725 9.04163 4.95841 8.12754 4.95841 6.99996Z" fill="%2393979F"/></g></svg>');
+}
+
+.icon-twitter:before {
+  mask-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25" fill="none"><path d="M20.9836 7.34106C21.0341 7.27066 20.9595 7.17977 20.8787 7.21108C20.3046 7.43362 19.7045 7.58376 19.0925 7.65775C19.774 7.25063 20.2999 6.63088 20.5915 5.89715C20.6212 5.82241 20.5395 5.75566 20.4691 5.79454C19.8358 6.14433 19.1527 6.39621 18.4431 6.54127C18.4134 6.54734 18.3828 6.53723 18.3619 6.51522C17.8294 5.95335 17.1285 5.57925 16.3644 5.44997C15.5842 5.31798 14.7823 5.44867 14.0844 5.82155C13.3865 6.19443 12.8321 6.7884 12.5081 7.51031C12.2001 8.19671 12.117 8.96186 12.2689 9.69669C12.2807 9.75371 12.2361 9.80754 12.178 9.80393C10.7974 9.71818 9.44847 9.35097 8.21435 8.72441C6.98335 8.09944 5.89327 7.23001 5.0105 6.16974C4.97132 6.12269 4.89707 6.12878 4.86852 6.18295C4.59384 6.70419 4.45002 7.28516 4.45041 7.87564C4.44929 8.4634 4.59353 9.04231 4.87028 9.56084C5.14703 10.0794 5.54771 10.5214 6.03663 10.8476C5.51813 10.8335 5.00972 10.7053 4.54737 10.4729C4.48778 10.443 4.41631 10.4856 4.41941 10.5522C4.45546 11.3273 4.73998 12.1053 5.23246 12.7023C5.75655 13.3375 6.48396 13.7723 7.29167 13.9329C6.98075 14.0276 6.65794 14.0774 6.33296 14.0811C6.15609 14.079 5.97956 14.066 5.8044 14.042C5.73945 14.0332 5.68642 14.0948 5.70915 14.1563C5.95006 14.8078 6.37567 15.3763 6.93527 15.7912C7.53355 16.2349 8.25524 16.481 8.99992 16.4953C7.74244 17.4847 6.18993 18.0248 4.58986 18.0292C4.42544 18.0298 4.2611 18.0244 4.09715 18.0133C4.00476 18.007 3.96227 18.1301 4.0419 18.1773C5.60091 19.1025 7.38282 19.5915 9.20037 19.5893C10.5423 19.6033 11.8735 19.3497 13.1164 18.8433C14.3592 18.337 15.4887 17.5881 16.4388 16.6404C17.389 15.6927 18.1407 14.5652 18.6502 13.3236C19.1597 12.0821 19.4168 10.7515 19.4063 9.40957V8.99137C19.4063 8.96386 19.4193 8.93798 19.4412 8.9214C20.0324 8.47504 20.5523 7.94214 20.9836 7.34106Z" fill="%23A1A1A1"/></svg>');
 }
